--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -142,7 +142,7 @@
   </h3>
   <div class="border-solid border-4 m-1 p-2 rounded-2xl border-gray-400">
     <span id="live-event-feed" phx-update="stream">
-      <.event_item :for={{dom_id, entry} <- @streams.events} entry={entry} id={dom_id} />
+      <.entry :for={{dom_id, entry} <- @streams.events} entry={entry} id={dom_id} />
     </span>
     <%!-- pattern matching against empty list, since `length/1` is O(n) --%>
     <span
