--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -1,4 +1,6 @@
-<.back :if={assigns[:character]} navigate={~p"/sessions/#{@character.character_id}"} parent_class="mb-2">Back to sessions</.back>
+<.back :if={assigns[:character]} navigate={~p"/sessions/#{@character.character_id}"} parent_class="mb-2">
+  Back to sessions
+</.back>
 
 <div class="flex">
   <div class="flex-col mr-4">
