--- a/lib/cai_web/live/session_live/show.html.heex
+++ b/lib/cai_web/live/session_live/show.html.heex
@@ -12,11 +12,10 @@
       <%= if @model.logout != :offline do %>
         <div class="flex justify-between">
           <div class="text-right mr-1">
-            Session from 
-            <br /> to
+            Session from <br /> to
           </div>
           <div>
-            <.timestamp id="session-login" unix_timestamp={@model.login} class="font-bold" /> 
+            <.timestamp id="session-login" unix_timestamp={@model.login} class="font-bold" />
             <br />
             <.timestamp id="session-logout" unix_timestamp={@model.logout} class="font-bold" />
           </div>
@@ -200,9 +199,8 @@
       </tr>
     </table>
     <div class="flex-col ml-4">
-      XP Earned: <%= @model.aggregates.xp_earned %> <br /> 
-      Teammates Revived: <%= @model.aggregates.revive_count %> <br />
-      Times Revived: <%= @model.aggregates.revived_by_count %><br />
+      XP Earned: <%= @model.aggregates.xp_earned %> <br /> Teammates Revived: <%= @model.aggregates.revive_count %>
+      <br /> Times Revived: <%= @model.aggregates.revived_by_count %><br />
       <.link_aggregates aggregates={@model.aggregates} />
       <br />
       Note: you can hover over some headers to see a more descriptive title, or hover over certain cells to see how they're calculated
